--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "optimist": "~0.5.2",
     "multilevel": "~4.0.5",
     "level-serve": "0.0.0",
-    "level": "~0.10.0"
+    "level": "~0.10.0",
+    "multilevel-serve": "0.0.0"
   },
   "bin": {
     "level-server": "./bin/server.js"
