--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "level-server",
   "description": "Standalone LevelDB file server.",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "repository": {
     "type": "git",
     "url": "git://github.com/Wayla/level-server.git"
@@ -12,7 +12,8 @@
     "multilevel": "~4.0.5",
     "level-serve": "1.1.0",
     "level": "~0.10.0",
-    "multilevel-serve": "0.0.0"
+    "multilevel-serve": "0.0.0",
+    "level-sublevel": "~4.7.0"
   },
   "bin": {
     "level-server": "./bin/server.js"
